--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,14 @@ plugins {
 group 'merce'
 version '1.0-SNAPSHOT'
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'Core.Main'
+        )
+    }
+}
+
 sourceCompatibility = 1.8
 
 repositories {
